# Cipher-Acceleration

./: .gitignore  CMakeLists.txt  LICENSE
.github/: copilot-instructions.md
CPU/include/aes128/: AES128.h
CPU/include/aes256/: AES256.h
CPU/include/ascon/: Ascon.h
CPU/include/common/: Modes.h  Utilities.h
CPU/include/salsa/: Salsa20.h
CPU/include/simon64/: SIMON64.h
CPU/include/trivium/: Trivium.h
CPU/src/: AES256.cpp  Modes.cpp
CPU/src/aes128/: Constants.cpp  Core.cpp
CPU/src/aes256/: Constants.cpp  Core.cpp
CPU/src/ascon/: Core.cpp
CPU/src/salsa/: Core.cpp
CPU/src/simon64/: Core.cpp
CPU/src/trivium/: Core.cpp
GPU/: README.md
GPU/include/aes128/: AES128_GPU.h
GPU/include/aes256/: AES256_GPU.h
GPU/include/common_gpu/: cuda_utils.h
GPU/include/simon64/: SIMON64_GPU.h
GPU/src/aes128/: Constants.cu  Core.cu
GPU/src/aes256/: Constants.cu  Core.cu  aes256_host.cu  aes256_kernel.cu
GPU/src/simon64/: Constants.cu  Core.cu
Implementation/CPU/include/aes128/: AES128Impl.h
Implementation/CPU/include/aes256/: AES256Impl.h
Implementation/CPU/include/ascon/: AsconImpl.h
Implementation/CPU/include/salsa/: Salsa20Impl.h
Implementation/CPU/include/simon64/: SIMON64Impl.h
Implementation/CPU/include/trivium/: TriviumImpl.h
Implementation/CPU/src/aes128/: AES128Impl.cpp
Implementation/CPU/src/aes256/: AES256Impl.cpp
Implementation/CPU/src/ascon/: AsconImpl.cpp
Implementation/CPU/src/salsa/: Salsa20Impl.cpp
Implementation/CPU/src/simon64/: SIMON64Impl.cpp
Implementation/CPU/src/trivium/: TriviumImpl.cpp
Implementation/GPU/include/aes128/: AES128GPUImpl.h
Implementation/GPU/include/aes256/: AES256GPUImpl.h
Implementation/GPU/include/ascon/: AsconGPUImpl.h
Implementation/GPU/include/salsa/: Salsa20GPUImpl.h
Implementation/GPU/include/simon64/: SIMON64GPUImpl.h
Implementation/GPU/include/trivium/: TriviumGPUImpl.h
Implementation/GPU/src/aes128/: AES128GPUImpl.cpp
Implementation/GPU/src/aes256/: AES256GPUImpl.cpp
Implementation/GPU/src/ascon/: AsconGPUImpl.cpp
Implementation/GPU/src/salsa/: Salsa20GPUImpl.cpp
Implementation/GPU/src/simon64/: SIMON64GPUImpl.cpp
Implementation/GPU/src/trivium/: TriviumGPUImpl.cpp
